@@ -5,10 +5,10 @@ class DateTimeTest < Test::Unit::TestCase
   
   def test_various_formats
     formats = {
-      '2006-01-01 01:01:01' => /Jan 01 01:01:01 [\w ]+ 2006/,
-      '2/2/06 7pm'          => /Feb 02 19:00:00 [\w ]+ 2006/,
-      '10 AUG 04 6.23am'    => /Aug 10 06:23:00 [\w ]+ 2004/,
-      '6 June 1981 10 10'   => /Jun 06 10:10:00 [\w ]+ 1981/
+      '2006-01-01 01:01:01' => /Jan 01 01:01:01 [\+-]?[\w ]+ 2006/,
+      '2/2/06 7pm'          => /Feb 02 19:00:00 [\+-]?[\w ]+ 2006/,
+      '10 AUG 04 6.23am'    => /Aug 10 06:23:00 [\+-]?[\w ]+ 2004/,
+      '6 June 1981 10 10'   => /Jun 06 10:10:00 [\+-]?[\w ]+ 1981/
     }
     
     formats.each do |value, result|
@@ -28,7 +28,14 @@ class DateTimeTest < Test::Unit::TestCase
     end
     assert_match /date time/, p.errors[:date_and_time_of_birth]
   end
-    
+  
+  def test_before_and_after_restrictions_parsed_as_date_times    
+    assert_no_update_and_errors_match /before/, :date_and_time_of_birth => '2008-01-02 00:00:00'
+    assert p.update_attributes(:date_and_time_of_birth => '2008-01-01 01:01:00')
+    assert_no_update_and_errors_match /after/, :date_and_time_of_birth => '1981-01-01 01:00am'
+    assert p.update_attributes(:date_and_time_of_birth => '1981-01-01 01:02am')
+  end
+  
   def test_multi_parameter_attribute_assignment_with_valid_date_time
     attributes = { 'time_of_birth(1i)' => '2006', 'time_of_birth(2i)' => '2', 'time_of_birth(3i)' => '20', 'time_of_birth(4i)' => '23', 'time_of_birth(5i)' => '10', 'time_of_birth(6i)' => '40' }
     assert_nothing_raised do
